--- a/people.htm
+++ b/people.htm
@@ -227,7 +227,7 @@ William Franz Lamberti received his B.A. in Mathematical Statistics from The Col
 <p style="line-height: 1.6;">
 <img align="right" src="images/shengyuan_wang.jpg" style="width:180px">
 <b>Shengyuan Wang, PhD</b>
-<!--<a href="mailto:npa4cn@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a>--> <a href="https://scholar.google.com/citations?user=o_XEptEAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
+<a href="mailto:vdj6tq@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a> <a href="https://scholar.google.com/citations?user=o_XEptEAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Shengyuan Wang joined the lab as a postdoctoral research associate in March 2022. He received his PhD in Bioinformatics and Computational Biology from George Mason University, M.S. in Pharmaceutical Science from North Carolina Central University and B.S. in Biotechnology from China Agricultural University. His research interest lies in algorithm development in genomics data analysis to tackle biological problems.
 </p><br><br>
@@ -264,30 +264,23 @@ Drew Vanichkachorn is a graduate student in the Master of Public Health (MPH) pr
 <hr>
 <h3><font color="#002F6C">Research Assistants</font></h3>
 <p style="line-height: 1.6;">
-<img align="right" src="images/ruoyao_shi.jpg" style="width:180px">
-<b>Ruoyao Shi</b>
-<a href="mailto:rs8cp@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Ruoyao Shi is a graduate student in biostatistics at the University of Michigan. She received her B.S. in biology from Tang Aoqing Honors Program in Biological Science, Jilin University, China. She joined the lab as a visiting undergraduate student in 2019, and continued doing research with the lab during graduate studies. She is enthusiastic about biostatistics and biological big data analysis, and is also interested in volunteer service, music and art in her spare time.
-</p><br><br>
-<p style="line-height: 1.6;">
 <img align="right" src="images/megan_grieco.jpg" style="width:180px">
 <b>Megan Grieco</b>
 <a href="mailto:mg3fh@virginia.edu "><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Megan Grieco graduated from UVA in 2021 majored in Systems Engineering and works in the lab as a research assistant while preparing for medical school. She joined the lab in Spring 2019 and has been excited about gaining experience in data science and research within the biological field. In her free time, she likes to travel, cheer on the Hoos, and rewatch the Office.
 </p><br><br>
-<hr>
-<h3><font color="#002F6C">Undergraduate Students</font></h3>
-<!--<h4><font color="#002F6C">Class of 2022</font></h4>-->
 <p style="line-height: 1.6;">
 <img align="right" src="images/ben_ke.jpg" style="width:180px">
 <b>Benjamin Ke</b>
 <a href="mailto:bgk5ck@virginia.edu "><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Ben Ke is an undergraduate student (Class of 2022) majoring in Biostatistics. He looks forward to learning how to apply statistical, coding, and other skills from the classroom in actual research. He currently volunteers at the UVA Hospital through Madison House and enjoys playing tennis and chess in his free time. After graduation, he hopes to study in a medically-related field.
+Ben Ke graduated from UVA in 2022 majored in Biostatistics and will matriculate at the MD program at UVA School of Medicine. He works in the lab since his First Year at UVA and continues in the summer after graduation. He works on using data science approaches to unravel the mystery underlying physical activities (as part of the MoTrPAC consortium). He also volunteers at the UVA Hospital through Madison House and enjoys playing tennis and chess in his free time.
 </p><br><br>
-<p style="line-height: 1.6;">
+<!--<hr>
+<h3><font color="#002F6C">Undergraduate Students</font></h3>
+<h4><font color="#002F6C">Class of 2022</font></h4>-->
+<!--<p style="line-height: 1.6;">
 <img align="right" src="images/emilie_neulen.jpg" style="width:180px">
 <b>Emilie Neulen</b>
 <a href="mailto:ean4tp@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
@@ -301,7 +294,7 @@ Emilie Neulen is a Biology major with a possible minor in German on the pre-med 
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Kuki Davey is an undergraduate student (class of 2022) from Jacksonville, Florida, majoring in Biology with a minor in Spanish. She is pursuing research opportunities because she is interested in learning about how computer science and biology intersect and are used to further advance the medical field. She hopes to attend medical school in the future. During her free time, she enjoys volunteering, traveling, and reading.
 </p><br><br>
-<!--<h4><font color="#002F6C">Class of 2024</font></h4>
+<h4><font color="#002F6C">Class of 2024</font></h4>
 <p style="line-height: 1.6;">
 <img align="right" src="images/caitlin_mcintyre.jpg" style="width:180px">
 <b>Caitlin McIntyre</b>
@@ -319,20 +312,35 @@ Ivory Tang (Class of 2025).
 </p><br><br>-->
 <hr>
 <h3><font color="#002F6C">High School Students</font></h3>
-<p style="line-height: 1.6;">
+<!--<p style="line-height: 1.6;">
 <img align="right" src="images/sonnet_xu.jpg" style="width:180px">
 <b>Sonnet Xu</b>
-<!--<a href="mailto:duf7xd@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a>--><br>
+<a href="mailto:duf7xd@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Sonnet is a current student at Troy High School (class of 2023) in Michigan interested in computational biology and computer science. She looks forward to learning more about gene expression and the epigenetic mechanisms of cancer. In her free time, she likes to hike outside and travel.
-</p><br><br><br>
+</p><br><br><br>-->
 <p style="line-height: 1.6;">
 <img align="right" src="images/katherine_zhang.jpg" style="width:180px">
 <b>Katherine Zhang</b>
 <!--<a href="mailto:duf7xd@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a>--><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Katherine is currently a student at Thomas Jefferson High School for Science and Technology (class of 2024) in Virginia. She is excited to learn about the applications of computer science in the field of biology and hopes to eventually pursue study in the medical field. In her spare time, she enjoys reading, taking walks with her dog, and volunteer tutoring.
-</p><br><br><br>
+</p><br><br>
+<p style="line-height: 1.6;">
+<b>Elizabeth McClung</b>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+UVA Advance 2022 Summer Student, from Rockbridge County High School, Lexington, VA
+</p><br>
+<p style="line-height: 1.6;">
+<b>Riya Shah</b>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+UVA Advance 2022 Summer Student, from Mclean High School, Mclean, VA
+</p><br>
+<p style="line-height: 1.6;">
+<b>Peter Stewart</b>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, VA
+</p><br><br>
 <hr>
 <h3><font color="#002F6C">Lab Alumni</font></h3>
 <h4><font color="#002F6C">Postdoctoral Associates</font></h4>
@@ -440,6 +448,12 @@ Katherine is currently a student at Thomas Jefferson High School for Science and
 		<th>Position after graduation</th>
 	</tr>
 	<tr>
+		<td><b>Kuki Davey</b></td>
+		<td>Biology</td>
+		<td>07/2020&ndash;05/2022</td>
+		<td>Graduate Student in Genomic Medicine, University of Oxford</td>
+	</tr>
+	<tr>
 		<td><b>Yayi Feng</b></td>
 		<td>Biology</td>
 		<td>09/2017&ndash;05/2020</td>
@@ -468,6 +482,12 @@ Katherine is currently a student at Thomas Jefferson High School for Science and
 		<td>Statistics and Economics</td>
 		<td>04/2018&ndash;05/2020</td>
 		<td>MS Student in Statistics, Carnegie Mellon University</td>
+	</tr>
+	<tr>
+		<td><b>Emilie Neulen</b></td>
+		<td>Biology</td>
+		<td>02/2020&ndash;05/2022</td>
+		<td></td>
 	</tr>
 	<tr>
 		<td><b>Naifei Pan</b></td>
@@ -557,12 +577,12 @@ Katherine is currently a student at Thomas Jefferson High School for Science and
 		<td>02/2018&ndash;05/2018</td>
 		<td>Graduate Student in Biomedical Informatics, Columbia University</td>
 	</tr>
-	<!--<tr>
+	<tr>
 		<td><b>Ruoyao Shi</b></td>
 		<td>Undergraduate Student in Tao Aoqing Honors Program in Biology Science, Jilin University</td>
 		<td>10/2019&ndash;05/2020</td>
 		<td>Graduate Student in Biostatistics, University of Michigan</td>
-	</tr>-->
+	</tr>
 </table>
 <br>
 <hr>
@@ -572,7 +592,7 @@ Katherine is currently a student at Thomas Jefferson High School for Science and
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: March 20, 2022</p>
+<p align="right">Last modified: May 16, 2022</p>
 
 </div>
 
