--- a/position.htm
+++ b/position.htm
@@ -136,15 +136,15 @@ function myFunction() {
 <h2 align="center"><font color="#002F6C">Positions</font></h2>
 <hr>
 <button type="button" class="collapsible">
-<h3><font color="#002F6C">Postdoctoral Research Associates (3 Positions)</font></h3>
+<h3><font color="#002F6C">Postdoctoral Research Associates (Experimental)</font></h3>
 </button>
 <div class="content">
 <p style="line-height: 1.6;">
 <font color="#002F6C"><b>Description</b></font>
 </p><p style="line-height: 1.6;">
-Our lab is seeking to fill <b>three</b> Postdoctoral Research Associate positions in the broad field of <b>bioinformatics and computational biology</b>. The research program in the lab focuses on developing computational methodologies and designing integrative data science approaches to study chromatin epigenomics and gene regulation. Current ongoing projects include: statistical modeling and advanced machine learning method development for transcriptional regulation prediction from multi-omics data; model-based algorithm development for single-cell epigenomics and spatial multi-omics data analysis; computational modeling of phase-separated transcriptional condensation; epigenetics and transcriptional regulation in T-cell immunity and human cancer, etc. More information on research directions and previous publications can be found at the <a href="https://zanglab.github.io/">lab website</a>.
+Our lab is looking to recruit a Postdoctoral Research Associate in the broad field of <b>functional genomics and epigenomics</b>. The research program in the lab focuses on developing computational methods for high-throughput genomics technologies and integrating computational and experimental approaches to study chromatin and gene regulation in mammalian cells and human disease systems. Current ongoing projects include: statistical modeling and advanced machine learning method development for transcriptional regulation prediction from multi-omics data; model-based algorithm development for single-cell epigenomics and spatial multi-omics data analysis; computational and experimental studies of chromatin regulation, transcriptional condensates, and phase separation; epigenetics and transcriptional regulation in T-cell immunity and human cancer, etc. More information on research directions and previous publications can be found at the <a href="https://zanglab.github.io/">lab website</a>.
 </p><p style="line-height: 1.6;">
-The Zang Lab is well funded by NIH and other agencies. Each postdoctoral scientist in the lab will receive comprehensive and personalized training in research and career development, and will have extensive opportunities for independent and collaborative research. Based at the Center for Public Health Genomics in UVA’s School of Medicine, the lab has established close collaborations with multiple labs both within and outside the university, including departments of Biochemistry and Molecular Genetics, Biomedical Engineering, Statistics, UVA Cancer Center and the new founded School of Data Science, as well as several other universities and research institutes.
+The Zang Lab is well funded by NIH and other agencies. Each postdoctoral scientist in the lab will receive comprehensive and personalized training in research and career development, and will have extensive opportunities for independent and collaborative research. Based at the Center for Public Health Genomics in UVA’s School of Medicine, the lab has established close collaborations with multiple groups in the field across the country. Experimental postdocs in the lab will have opportunities to collaborate with and be co-mentored by senior experimental faculty in the center and across the school.
 </p><p style="line-height: 1.6;">
 Founded by Thomas Jefferson, University of Virginia is the first public university in the United States and is one of the most reputable research universities in the country. The university continues in its mission to develop tomorrow's leaders who are well prepared to help shape the future of the nation and the world.
 </p><p style="line-height: 1.6;">
@@ -152,7 +152,53 @@ Founded by Thomas Jefferson, University of Virginia is the first public universi
 </p>
 <ol style="padding-left: 18px;">
 <li><p style="line-height: 1.6;">
-To qualify for the positions, a Ph.D. or equivalent degree in any quantitative science, including but not limited to <i>Bioinformatics, Computational Biology, Applied Mathematics, Statistics, Physics, Chemistry, Computer Science, Data Science, Engineering or a related field</i> is required by the start date;
+Ph.D. or equivalent degree in biological or biomedical sciences is required by start date;
+</p></li>
+<li><p style="line-height: 1.6;">
+Proficient training and experience in experimental cellular and molecular biology;
+</p></li>
+<li><p style="line-height: 1.6;">
+Excellent communication and teamwork skills;
+</p></li>
+<li><p style="line-height: 1.6;">
+At least one peer-reviewed publication from PhD research as a lead author written in English with submitted, accepted or published status at the time of application;
+</p></li>
+<li><p style="line-height: 1.6;">
+Experience in cell culture, high-throughput genomics and epigenomics assays such as RNA-seq, ChIP-seq, ATAC-seq, CRISPR, and single-cell experiments is a plus;
+</p></li>
+<li><p style="line-height: 1.6;">
+Understanding the synergy of computational and experimental research and commitment to collaboration and team science is a plus.
+</p></li>
+</ol>
+<p style="line-height: 1.6;">
+<font color="#002F6C"><b>Application Process</b></font>
+</p><p style="line-height: 1.6;">
+To <a href="https://uva.wd1.myworkdayjobs.com/UVAJobs/job/Charlottesville-VA/Postdoc-Research-Associate-in-Bioinformatics-Computational-Biology_R0030504" target="_blank">apply online</a>, please click <a href="https://uva.wd1.myworkdayjobs.com/UVAJobs/job/Charlottesville-VA/Postdoc-Research-Associate-in-Bioinformatics-Computational-Biology_R0030504" target="_blank">here</a> and submit a complete application in the system. Meanwhile, Interested applicants can send a complete CV and contact information for three references to <a href="mailto:zang@virginia.edu">zang@virginia.edu</a> with subject line "Postdoc application". The posting will remain open until all positions are filled.
+</p><p style="line-height: 1.6;">
+All positions are restricted and contingent on the continuation of funding. The University of Virginia is an equal opportunity and affirmative action employer. Women, minorities, veterans and persons with disabilities are strongly encouraged to apply.
+</p><p style="line-height: 1.6;">
+For questions or inquiries, please email <a href="mailto:zang@virginia.edu">zang@virginia.edu</a>.
+</p>
+</div>
+<hr>
+<button type="button" class="collapsible">
+<h3><font color="#002F6C">Postdoctoral Research Associates (Computational)</font></h3>
+</button>
+<div class="content">
+<p style="line-height: 1.6;">
+<font color="#002F6C"><b>Description</b></font>
+</p><p style="line-height: 1.6;">
+Our lab is seeking to fill <b>Two</b> Postdoctoral Research Associate positions in the broad field of <b>bioinformatics and computational biology</b>. The research program in the lab focuses on developing computational methods for high-throughput genomics technologies and integrating computational and experimental approaches to study chromatin and gene regulation in mammalian cells and human disease systems. Current ongoing projects include: statistical modeling and advanced machine learning method development for transcriptional regulation prediction from multi-omics data; model-based algorithm development for single-cell epigenomics and spatial multi-omics data analysis; computational and experimental studies of chromatin regulation, transcriptional condensates, and phase separation; epigenetics and transcriptional regulation in T-cell immunity and human cancer, etc. More information on research directions and previous publications can be found at the <a href="https://zanglab.github.io/">lab website</a>.
+</p><p style="line-height: 1.6;">
+The Zang Lab is well funded by NIH and other agencies. Each postdoctoral scientist in the lab will receive comprehensive and personalized training in research and career development, and will have extensive opportunities for independent and collaborative research. Based at the Center for Public Health Genomics in UVA’s School of Medicine, the lab has established close collaborations with multiple groups in the field across the country.
+</p><p style="line-height: 1.6;">
+Founded by Thomas Jefferson, University of Virginia is the first public university in the United States and is one of the most reputable research universities in the country. The university continues in its mission to develop tomorrow's leaders who are well prepared to help shape the future of the nation and the world.
+</p><p style="line-height: 1.6;">
+<font color="#002F6C"><b>Requirements</b></font>
+</p>
+<ol style="padding-left: 18px;">
+<li><p style="line-height: 1.6;">
+A Ph.D. or equivalent degree in any quantitative science, including but not limited to <i>Bioinformatics, Computational Biology, Applied Mathematics, Statistics, Physics, Chemistry, Computer Science, Data Science, Engineering or a related field</i> is required by the start date;
 </p></li>
 <li><p style="line-height: 1.6;">
 Proficient in <i>Python (or C/C++) & R</i> programming;
@@ -179,7 +225,7 @@ For questions or inquiries, please email <a href="mailto:zang@virginia.edu">zang
 </div>
 <hr>
 <button type="button" class="collapsible">
-<h3><font color="#002F6C">Computational Biologist (1 Position)</font></h3>
+<h3><font color="#002F6C">Computational Biologist</font></h3>
 </button>
 <div class="content">
 <p style="line-height: 1.6;">
@@ -218,7 +264,7 @@ For questions or inquiries, please email <a href="mailto:zang@virginia.edu">zang
 </div>
 <hr>
 <button type="button" class="collapsible">
-<h3><font color="#002F6C">Bioinformatics Research Scientist (1 Position)</font></h3>
+<h3><font color="#002F6C">Bioinformatics Research Scientist</font></h3>
 </button>
 <div class="content">
 <p style="line-height: 1.6;">
@@ -309,7 +355,7 @@ Take a look at these two videos about why we are excited to be part of the UVA c
 <a href="https://news.virginia.edu/video/charlottesville" target="_blank">"This is Charlottesville."</a>
 </p>
 <hr>
-<p align="right">Last modified: February 7, 2022</p>
+<p align="right">Last modified: May 19, 2022</p>
 </div>
 
 <script>
