--- a/publication.htm
+++ b/publication.htm
@@ -150,24 +150,24 @@ Yuriko Harigaya, Zhaojun Zhang, <u>Hongpan Zhang</u>, <u>Chongzhi Zang</u>, Nanc
 <br>
 <b>bioRxiv</b>, doi: <a href="https://www.biorxiv.org/content/10.1101/2021.09.22.461437v1" target="_blank">https://doi.org/10.1101/2021.09.22.461437</a> (2021)
 </p></li>
-<li><p><a href="https://www.biorxiv.org/content/10.1101/2021.06.07.447388v1" target="_blank">Cell-specific chromatin landscape of human coronary artery resolves regulatory mechanisms of disease risk</a><br>
-Adam W. Turner*, <u>Shengen Shawn Hu</u>*, Jose Verdezoto Mosquera, Wei Feng Ma, Chani Hodonsky, Doris Wong, Gaelle Auguste, Katia Sol-Church, Emily A. Farber, Soumya Kundu, Anshul B. Kundaje, Nicolas G. Lopez, Lijiang Ma, Saikat Kumar B. Ghosh, Suna Onengut-Gumuscu, Euan A. Ashley, Thomas Quertermous, Aloke V. Finn, Nicholas J. Leeper, Jason C. Kovacic, Johan L.M. Bjorkegren, <u>Chongzhi Zang</u><sup>#</sup>, Clint L. Miller<sup>#</sup>
-<br>
-<b>bioRxiv</b>, doi: <a href="https://www.biorxiv.org/content/10.1101/2021.06.07.447388v1" target="_blank">https://doi.org/10.1101/2021.06.07.447388</a> (2021)
-</p></li>
 </ol>
 <hr>
 <h3><font color="#002F6C">Selected Publications</font></h3>
 <ol style="padding-left: 24px; line-height: 1.6;">
+<li><p><a href="https://www.nature.com/articles/s41588-022-01069-0" target="_blank">Single-nucleus chromatin accessibility profiling highlights regulatory mechanisms of coronary artery disease risk</a><br>
+Adam W. Turner*, <u>Shengen Shawn Hu</u>*, Jose Verdezoto Mosquera, Wei Feng Ma, Chani J. Hodonsky, Doris Wong, Gaëlle Auguste, Yipei Song, Katia Sol-Church, Emily Farber, Soumya Kundu, Anshul Kundaje, Nicolas G. Lopez, Lijiang Ma, Saikat Kumar B, Ghosh, Suna Onengut-Gumuscu, Euan A. Ashley, Thomas Quertermous, Aloke V. Finn, Nicholas J. Leeper, Jason C. Kovacic, Johan L.M. Björkgren, <u>Chongzhi Zang</u><sup>#</sup>, Clint L. Miller<sup>#</sup>
+<br>
+<i><b>Nature Genetics</b></i>, doi: <a href="https://www.nature.com/articles/s41588-022-01069-0" target="_blank">https://doi.org/10.1038/s41588-022-01069-0</a> (2022)
+</p></li>
 <li><p><a href="https://www.nature.com/articles/s41590-022-01131-3" target="_blank">Tcf1 preprograms the mobilization of glycolysis in central memory CD8<sup>+</sup> T cells during recall responses</a><br> 
 Qiang Shan*, <u>Shengen Shawn Hu</u>*, Shaoqi Zhu, Xia Chen, Vladimir P. Badovinac, Weiqun Peng, <u>Chongzhi Zang</u><sup>#</sup>, Hai-Hui Xue</u><sup>#</sup>
 <br>
-<i><b>Nature Immunology</b></i>, doi:10.1038/s41590-022-01131-3 (2022)
+<i><b>Nature Immunology</b></i> 23, 386&ndash;398 (2022)
 </p></li>
 <li><p><a href="https://www.nature.com/articles/s41375-021-01464-2" target="_blank">Genetic ablation of Pim1 or pharmacologic inhibition with TP-3654 ameliorates myelofibrosis in murine models</a><br> 
 Avik Dutta*, Dipmoy Nath*, Yue Yang, Bao T. Le, Mohammad Ferdous-Ur Rahman, Patrick Faughnan, <u>Zhenjia Wang</u>, Matthew Stuver, <u>Rongquan He</u>, <u>Wuwei Tan</u>, Robert E. Hutchison, Jason M. Foulks, Steven L. Warner, <u>Chongzhi Zang</u>, Golam Mohi
 <br>
-<i><b>Leukemia</b></i>, doi:10.1038/s41375-021-01464-2 (2021)
+<i><b>Leukemia</b></i> 36, 746&ndash;759 (2022)
 </p></li>
 <li><p><a href="https://www.nature.com/articles/s41586-021-03903-7" target="_blank">UTX condensation underlies its tumour-suppressive activity</a><br> 
 Bi Shi*, Wei Li*, Yansu Song*, <u>Zhenjia Wang</u>*, Rui Ju, Aleksandra Ulman, Jing Hu, Francesco Palomba, Yanfang Zhao, John Philip Le, William Jarrard, David Dimoff, Michelle A. Digman, Enrico Gratton, <u>Chongzhi Zang</u>, Hao Jiang 
@@ -278,7 +278,7 @@ Shenglin Mei, Clifford A. Meyer, Rongbin Zheng, Qian Qin, Qiu Wu, Peng Jiang, Bo
 <p><font color="#002F6C"><b>Publications before the Zang Lab launches</b></font></p>
 </button>
 <div class="content">
-<ol style="padding-left: 24px; line-height: 1.6;" start="26">
+<ol style="padding-left: 24px; line-height: 1.6;" start="27">
 <li><p><a href="http://stke.sciencemag.org/content/10/477/eaag1598" target="_blank">Genome-wide identification and characterization of Notch transcription complex-binding sequence-paired sites in leukemia cells</a><br> 
 Eric Severson*, Kelly L. Arnett*, Hongfang Wang*, <u>Chongzhi Zang</u>*, Len Taing, Hudan Liu, Warren S. Pear, X. Shirley Liu, Stephen C. Blacklow<sup>#</sup>, Jon C. Aster<sup>#</sup><br>
 <i><b>Science Signaling</b></i> 10, 477, eaag1598 (2017)
@@ -398,7 +398,7 @@ Zuo-Qiang Hao, Jie Zhang<sup>#</sup>, Jin Yu, Zhe Zhang, Jia-Yong Zhong, <u>Chon
 </ol>
 </div>
 <hr>
-<p align="right">Last modified: February 21, 2022</p>
+<p align="right">Last modified: May 19, 2022</p>
 </div>
 
 <script>
