--- a/position.htm
+++ b/position.htm
@@ -136,7 +136,7 @@ function myFunction() {
 <h2 align="center"><font color="#002F6C">Positions</font></h2>
 <hr>
 <button type="button" class="collapsible">
-<h3><font color="#002F6C">Postdoctoral Research Associates (Experimental)</font></h3>
+<h3><font color="#002F6C">Postdoctoral Research Associate (Experimental)</font></h3>
 </button>
 <div class="content">
 <p style="line-height: 1.6;">
@@ -164,16 +164,16 @@ Excellent communication and teamwork skills;
 At least one peer-reviewed publication from PhD research as a lead author written in English with submitted, accepted or published status at the time of application;
 </p></li>
 <li><p style="line-height: 1.6;">
-Experience in cell culture, high-throughput genomics and epigenomics assays such as RNA-seq, ChIP-seq, ATAC-seq, CRISPR, and single-cell experiments is a plus;
+Experience in cell culture, high-throughput genomics and epigenomics assays such as RNA-seq, ChIP-seq, ATAC-seq, CRISPR, and single-cell experiments is preferred;
 </p></li>
 <li><p style="line-height: 1.6;">
-Understanding the synergy of computational and experimental research and commitment to collaboration and team science is a plus.
+Understanding the synergy of computational and experimental research and commitment to collaboration and team science is preferred.
 </p></li>
 </ol>
 <p style="line-height: 1.6;">
 <font color="#002F6C"><b>Application Process</b></font>
 </p><p style="line-height: 1.6;">
-To <a href="https://uva.wd1.myworkdayjobs.com/UVAJobs/job/Charlottesville-VA/Postdoc-Research-Associate-in-Bioinformatics-Computational-Biology_R0030504" target="_blank">apply online</a>, please click <a href="https://uva.wd1.myworkdayjobs.com/UVAJobs/job/Charlottesville-VA/Postdoc-Research-Associate-in-Bioinformatics-Computational-Biology_R0030504" target="_blank">here</a> and submit a complete application in the system. Meanwhile, Interested applicants can send a complete CV and contact information for three references to <a href="mailto:zang@virginia.edu">zang@virginia.edu</a> with subject line "Postdoc application". The posting will remain open until all positions are filled.
+To <a href="https://uva.wd1.myworkdayjobs.com/UVAJobs/job/Charlottesville-VA/Post-Doctoral-Research-Associate-in-Functional-Genomics-and-Epigenomics_R0036405" target="_blank">apply online</a>, please click <a href="https://uva.wd1.myworkdayjobs.com/UVAJobs/job/Charlottesville-VA/Post-Doctoral-Research-Associate-in-Functional-Genomics-and-Epigenomics_R0036405" target="_blank">here</a> and submit a complete application in the system. Meanwhile, Interested applicants can send a complete CV and contact information for three references to <a href="mailto:zang@virginia.edu">zang@virginia.edu</a> with subject line "Postdoc application". The posting will remain open until all positions are filled.
 </p><p style="line-height: 1.6;">
 All positions are restricted and contingent on the continuation of funding. The University of Virginia is an equal opportunity and affirmative action employer. Women, minorities, veterans and persons with disabilities are strongly encouraged to apply.
 </p><p style="line-height: 1.6;">
@@ -355,7 +355,7 @@ Take a look at these two videos about why we are excited to be part of the UVA c
 <a href="https://news.virginia.edu/video/charlottesville" target="_blank">"This is Charlottesville."</a>
 </p>
 <hr>
-<p align="right">Last modified: May 19, 2022</p>
+<p align="right">Last modified: May 25, 2022</p>
 </div>
 
 <script>
