--- a/index.htm
+++ b/index.htm
@@ -149,7 +149,7 @@ function myFunction() {
 		<p>
 		Congratulations to the graduating class of 2022! Ben Ke will stay at UVA and start his medical school training this fall. Kuki will pursue graduate studies at the University of Oxford. Way to go everyone!
 		<br><br>
-		Hongpan and Shawn's paper in collaboration with the Tae-Hee Kim Lab is accepted to <i><b>Nature Communications</b></i>!
+		Hongpan and Shawn's paper in collaboration with the Tae-Hee Kim Lab is accepted to <a href="https://www.nature.com/articles/s41467-022-30624-w" target="_blank"><i><b>Nature Communications</b></i></a>!
 		</p>
 	</div>
 </div>
@@ -802,7 +802,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: May 20, 2022</p>
+<p align="right">Last modified: May 26, 2022</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
