--- a/publication.htm
+++ b/publication.htm
@@ -154,10 +154,15 @@ Yuriko Harigaya, Zhaojun Zhang, <u>Hongpan Zhang</u>, <u>Chongzhi Zang</u>, Nanc
 <hr>
 <h3><font color="#002F6C">Selected Publications</font></h3>
 <ol style="padding-left: 24px; line-height: 1.6;">
+<li><p><a href="https://www.nature.com/articles/s41467-022-30624-w" target="_blank">Single-cell chromatin profiling of the primitive gut tube reveals regulatory dynamics underlying lineage fate decisions</a><br>
+Ryan J. Smith*, <u>Hongpan Zhang</u>*, <u>Shengen Shawn Hu</u>*, Theodora Yung, Roshane Francis, Lilian Lee, Mark W. Onaitis, Peter B. Dirks, <u>Chongzhi Zang</u><sup>#</sup>, Tae-Hee Kim<sup>#</sup>
+<br>
+<i><b>Nature Communications</b></i>, doi: <a href="https://www.nature.com/articles/s41467-022-30624-w" target="_blank">10.1038/s41467-022-30624-w</a> (2022)
+</p></li>
 <li><p><a href="https://www.nature.com/articles/s41588-022-01069-0" target="_blank">Single-nucleus chromatin accessibility profiling highlights regulatory mechanisms of coronary artery disease risk</a><br>
 Adam W. Turner*, <u>Shengen Shawn Hu</u>*, Jose Verdezoto Mosquera, Wei Feng Ma, Chani J. Hodonsky, Doris Wong, Gaëlle Auguste, Yipei Song, Katia Sol-Church, Emily Farber, Soumya Kundu, Anshul Kundaje, Nicolas G. Lopez, Lijiang Ma, Saikat Kumar B, Ghosh, Suna Onengut-Gumuscu, Euan A. Ashley, Thomas Quertermous, Aloke V. Finn, Nicholas J. Leeper, Jason C. Kovacic, Johan L.M. Björkgren, <u>Chongzhi Zang</u><sup>#</sup>, Clint L. Miller<sup>#</sup>
 <br>
-<i><b>Nature Genetics</b></i>, doi: <a href="https://www.nature.com/articles/s41588-022-01069-0" target="_blank">https://doi.org/10.1038/s41588-022-01069-0</a> (2022)
+<i><b>Nature Genetics</b></i>, doi: <a href="https://www.nature.com/articles/s41588-022-01069-0" target="_blank">10.1038/s41588-022-01069-0</a> (2022)
 </p></li>
 <li><p><a href="https://www.nature.com/articles/s41590-022-01131-3" target="_blank">Tcf1 preprograms the mobilization of glycolysis in central memory CD8<sup>+</sup> T cells during recall responses</a><br> 
 Qiang Shan*, <u>Shengen Shawn Hu</u>*, Shaoqi Zhu, Xia Chen, Vladimir P. Badovinac, Weiqun Peng, <u>Chongzhi Zang</u><sup>#</sup>, Hai-Hui Xue</u><sup>#</sup>
@@ -278,7 +283,7 @@ Shenglin Mei, Clifford A. Meyer, Rongbin Zheng, Qian Qin, Qiu Wu, Peng Jiang, Bo
 <p><font color="#002F6C"><b>Publications before the Zang Lab launches</b></font></p>
 </button>
 <div class="content">
-<ol style="padding-left: 24px; line-height: 1.6;" start="27">
+<ol style="padding-left: 24px; line-height: 1.6;" start="28">
 <li><p><a href="http://stke.sciencemag.org/content/10/477/eaag1598" target="_blank">Genome-wide identification and characterization of Notch transcription complex-binding sequence-paired sites in leukemia cells</a><br> 
 Eric Severson*, Kelly L. Arnett*, Hongfang Wang*, <u>Chongzhi Zang</u>*, Len Taing, Hudan Liu, Warren S. Pear, X. Shirley Liu, Stephen C. Blacklow<sup>#</sup>, Jon C. Aster<sup>#</sup><br>
 <i><b>Science Signaling</b></i> 10, 477, eaag1598 (2017)
@@ -398,7 +403,7 @@ Zuo-Qiang Hao, Jie Zhang<sup>#</sup>, Jin Yu, Zhe Zhang, Jia-Yong Zhong, <u>Chon
 </ol>
 </div>
 <hr>
-<p align="right">Last modified: May 19, 2022</p>
+<p align="right">Last modified: May 26, 2022</p>
 </div>
 
 <script>
