--- a/publication.htm
+++ b/publication.htm
@@ -162,7 +162,8 @@ Ryan J. Smith*, <u>Hongpan Zhang</u>*, <u>Shengen Shawn Hu</u>*, Theodora Yung, 
 <li><p><a href="https://www.nature.com/articles/s41588-022-01069-0" target="_blank">Single-nucleus chromatin accessibility profiling highlights regulatory mechanisms of coronary artery disease risk</a><br>
 Adam W. Turner*, <u>Shengen Shawn Hu</u>*, Jose Verdezoto Mosquera, Wei Feng Ma, Chani J. Hodonsky, Doris Wong, Gaëlle Auguste, Yipei Song, Katia Sol-Church, Emily Farber, Soumya Kundu, Anshul Kundaje, Nicolas G. Lopez, Lijiang Ma, Saikat Kumar B. Ghosh, Suna Onengut-Gumuscu, Euan A. Ashley, Thomas Quertermous, Aloke V. Finn, Nicholas J. Leeper, Jason C. Kovacic, Johan L.M. Björkgren, <u>Chongzhi Zang</u><sup>#</sup>, Clint L. Miller<sup>#</sup>
 <br>
-<i><b>Nature Genetics</b></i>, doi: <a href="https://www.nature.com/articles/s41588-022-01069-0" target="_blank">10.1038/s41588-022-01069-0</a> (2022)
+<i><b>Nature Genetics</b></i>, doi: <a href="https://www.nature.com/articles/s41588-022-01069-0" target="_blank">10.1038/s41588-022-01069-0</a> (2022)<br>
+(Summary in <a href="https://www.nature.com/articles/s41588-022-01029-8" target="_blank"><i>Nature Genetics Research Briefing</i></a>)
 </p></li>
 <li><p><a href="https://www.nature.com/articles/s41590-022-01131-3" target="_blank">Tcf1 preprograms the mobilization of glycolysis in central memory CD8<sup>+</sup> T cells during recall responses</a><br> 
 Qiang Shan*, <u>Shengen Shawn Hu</u>*, Shaoqi Zhu, Xia Chen, Vladimir P. Badovinac, Weiqun Peng, <u>Chongzhi Zang</u><sup>#</sup>, Hai-Hui Xue</u><sup>#</sup>
