--- a/publication.htm
+++ b/publication.htm
@@ -140,15 +140,25 @@ function myFunction() {
 <h3><font color="#002F6C">Recent Preprints</font></h3>
 * indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.
 <ol style="padding-left: 24px; line-height: 1.6;">
-<li><p><a href="https://www.biorxiv.org/content/10.1101/2021.10.22.465530v1" target="_blank">Accurate estimation of intrinsic biases for improved analysis of chromatin accessibility sequencing data using SELMA</a><br>
+<li><p><a href="https://www.biorxiv.org/content/10.1101/2021.10.22.465530v2" target="_blank">Accurate estimation of intrinsic biases for improved analysis of bulk and single-cell chromatin accessibility sequencing data using SELMA</a><br>
 <u>Shengen Shawn Hu</u>, Lin Liu, Qi Li, <u>Wenjing Ma</u>, Michael J. Guertin, Clifford A. Meyer, Ke Deng, Tingting Zhang, <u>Chongzhi Zang</u>
 <br>
-<b>bioRxiv</b>, doi: <a href="https://www.biorxiv.org/content/10.1101/2021.10.22.465530v1" target="_blank">https://doi.org/10.1101/2021.10.22.465530</a> (2021)
+<b>bioRxiv</b>, doi: <a href="https://www.biorxiv.org/content/10.1101/2021.10.22.465530v2" target="_blank">https://doi.org/10.1101/2021.10.22.465530</a> (2022)
 </p></li>
-<li><p><a href="https://www.biorxiv.org/content/10.1101/2021.09.22.461437v1" target="_blank">Nonparametric interrogation of transcriptional regulation in single-cell RNA and chromatin accessibility multiomic data</a><br>
-Yuriko Harigaya, Zhaojun Zhang, <u>Hongpan Zhang</u>, <u>Chongzhi Zang</u>, Nancy R Zhang<sup>#</sup>, Yuchao Jiang<sup>#</sup>
+<li><p><a href="https://www.biorxiv.org/content/10.1101/2021.09.22.461437v2" target="_blank">Nonparametric interrogation of transcriptional regulation in single-cell RNA and chromatin accessibility multiomic data</a><br>
+Yuchao Jiang<sup>#</sup>, Yuriko Harigaya, Zhaojun Zhang, <u>Hongpan Zhang</u>, <u>Chongzhi Zang</u>, Nancy R Zhang<sup>#</sup>
 <br>
-<b>bioRxiv</b>, doi: <a href="https://www.biorxiv.org/content/10.1101/2021.09.22.461437v1" target="_blank">https://doi.org/10.1101/2021.09.22.461437</a> (2021)
+<b>bioRxiv</b>, doi: <a href="https://www.biorxiv.org/content/10.1101/2021.09.22.461437v2" target="_blank">https://doi.org/10.1101/2021.09.22.461437</a> (2022)
+</p></li>
+<li><p><a href="https://www.biorxiv.org/content/10.1101/2022.05.12.491704v1" target="_blank">Fob1-dependent condensin recruitment and loop extrusion on yeast chromosome III</a><br>
+Manikarna Dinda, Ryan D. Fine, Shekhar Saha, <u>Zhenjia Wang</u>, <u>Chongzhi Zang</u>, Mingguang Li, Jeffrey S. Smith
+<br>
+<b>bioRxiv</b>, doi: <a href="https://www.biorxiv.org/content/10.1101/2022.05.12.491704v1" target="_blank">https://doi.org/10.1101/2022.05.12.491704</a> (2022)
+</p></li>
+<li><p><a href="https://www.biorxiv.org/content/10.1101/2022.03.16.484676v1" target="_blank">Extracting physical characteristics of higher-order chromatin structures from 3D image data</a><br>
+<u>William Franz Lamberti</u>, <u>Chongzhi Zang</u>
+<br>
+<b>bioRxiv</b>, doi: <a href="https://www.biorxiv.org/content/10.1101/2022.03.16.484676v1" target="_blank">https://doi.org/10.1101/2022.03.16.484676</a> (2022)
 </p></li>
 </ol>
 <hr>
@@ -404,7 +414,7 @@ Zuo-Qiang Hao, Jie Zhang<sup>#</sup>, Jin Yu, Zhe Zhang, Jia-Yong Zhong, <u>Chon
 </ol>
 </div>
 <hr>
-<p align="right">Last modified: May 26, 2022</p>
+<p align="right">Last modified: May 31, 2022</p>
 </div>
 
 <script>
