--- a/index.htm
+++ b/index.htm
@@ -142,6 +142,18 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">June 2022</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Hongpan publishes a <a href="https://go.nature.com/3x2WMT4" target="_blank">"Behind the Paper" article</a> at the <a href="https://go.nature.com/3x2WMT4" target="_blank">Nature Portfolio Community</a> website about the recent <a href="https://www.nature.com/articles/s41467-022-30624-w" target="_blank"><i><b>Nature Communications</b></i> paper</a>. Way to go!
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">May 2022</font>
 		</p>
 	</div>
@@ -802,7 +814,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: May 26, 2022</p>
+<p align="right">Last modified: June 1, 2022</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
