--- a/index.htm
+++ b/index.htm
@@ -147,6 +147,10 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
+		The Board of Visitors of UVA officially approves Chongzhi's promotion to Associate Professor, effective July 1, 2022. 
+		<br><br>
+		Billy's EPICS paper is accepted to <i><b>Computational and Structural Biotechnology Journal</b></i>!
+		<br><br>
 		Hongpan publishes a <a href="https://go.nature.com/3x2WMT4" target="_blank">"Behind the Paper" article</a> at the <a href="https://go.nature.com/3x2WMT4" target="_blank">Nature Portfolio Community</a> website about the recent <a href="https://www.nature.com/articles/s41467-022-30624-w" target="_blank"><i><b>Nature Communications</b></i> paper</a>. Way to go!
 		</p>
 	</div>
@@ -814,7 +818,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: June 1, 2022</p>
+<p align="right">Last modified: June 10, 2022</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
