--- a/people.htm
+++ b/people.htm
@@ -190,7 +190,7 @@ Website: <a href="https://czang.github.io/" target="_blank">czang.github.io</a><
 <a href="CV_chongzhi_zang.pdf" target="_blank">Curriculum Vitae (pdf)</a> 
 </p>
 <p style="width: 900px; line-height: 1.6;" align="left">
-Dr. Chongzhi Zang is an Assistant Professor in the Center for Public Health Genomics, University of Virginia School of Medicine. He holds faculty appointments in the Departments of Public Health Sciences, Biochemistry and Molecular Genetics, and Biomedical Engineering at UVA. He is also a faculty member of the UVA Comprehensive Cancer Center. Chongzhi received his BS in physics from Peking University and PhD in physics from the George Washington University. He did his undergraduate research in high-field laser physics with <a href="http://highfield.iphy.ac.cn/member_detail_z.html" target="_blank">Jie Zhang</a> at the Institute of Physics, Chinese Academy of Sciences, and his PhD research in computational biophysics with <a href="http://home.gwu.edu/~wpeng/" target="_blank">Weiqun Peng</a> and <a href="https://www.nhlbi.nih.gov/science/epigenome-biology/people/zhao-keji" target="_blank">Keji Zhao</a> at the National Institutes of Health. Before joining UVA, he completed his postdoctoral training with <a href="http://liulab.dfci.harvard.edu" target="_blank">Xiaole Shirley Liu</a> at Harvard University's Dana-Farber Cancer Institute. Chongzhi is a computational biologist with expertise in epigenetics and transcriptional regulation. His research focuses on algorithm development for high-throughput genomic data analysis and integrative modeling of gene regulatory networks in mammalian cell systems.
+Dr. Chongzhi Zang is an Associate Professor in the Center for Public Health Genomics, University of Virginia School of Medicine. He holds faculty appointments in the Departments of Public Health Sciences, Biochemistry and Molecular Genetics, and Biomedical Engineering at UVA since November 2016. He is also a faculty member of the UVA Comprehensive Cancer Center. Chongzhi received his BS in physics from Peking University and PhD in physics from the George Washington University. He did his undergraduate research in high-field laser physics with <a href="http://highfield.iphy.ac.cn/member_detail_z.html" target="_blank">Jie Zhang</a> at the Institute of Physics, Chinese Academy of Sciences, and his PhD research in computational biophysics with <a href="http://home.gwu.edu/~wpeng/" target="_blank">Weiqun Peng</a> and <a href="https://www.nhlbi.nih.gov/science/epigenome-biology/people/zhao-keji" target="_blank">Keji Zhao</a> at the National Institutes of Health. Before joining UVA, he completed his postdoctoral training with <a href="http://liulab.dfci.harvard.edu" target="_blank">Xiaole Shirley Liu</a> at Harvard University's Dana-Farber Cancer Institute. Chongzhi is a computational biologist with expertise in epigenetics and transcriptional regulation. His research focuses on algorithm development for high-throughput genomic data analysis and integrative modeling of gene regulatory networks in mammalian cell systems.
 </p><br>
 <hr>
 <h3><font color="#002F6C">Research Scientists</font></h3>
@@ -254,13 +254,6 @@ Hongpan Zhang is a PhD student in the Biomedical Sciences (BIMS) program. Before
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Zhaoxia Ma is a PhD student in the Biomedical Sciences (BIMS) program. She received her M.S. in Operational Research and Computational Systems Biology from Academy of Mathematics and Systems Science, Chinese Academy of Sciences, and B.S. in Mathematics and Applied Mathematics (Honors Science Program) from Xi’an Jiaotong University. She is interested in developing computational models and utilizing computational methods to analyze genomics and epigenomics data. She enjoys listening to music and playing badminton.
 </p><br><br>
-<p style="line-height: 1.6;">
-<img align="right" src="images/drew_vanichkachorn.jpg" style="width:180px">
-<b>Andrew Vanichkachorn</b>
-<a href="mailto:acv3by@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Drew Vanichkachorn is a graduate student in the Master of Public Health (MPH) program. He joined the lab in 2019 as a 3rd Year undergraduate student majoring in Global Public Health. Drew is excited to be learning about genomics and believes this field to be important in the future of medicine. He is also interested in music and enjoys playing the piano and viola when he can.
-</p><br><br>
 <hr>
 <h3><font color="#002F6C">Research Assistants</font></h3>
 <p style="line-height: 1.6;">
@@ -271,13 +264,20 @@ Drew Vanichkachorn is a graduate student in the Master of Public Health (MPH) pr
 Megan Grieco graduated from UVA in 2021 majored in Systems Engineering and works in the lab as a research assistant while preparing for medical school. She joined the lab in Spring 2019 and has been excited about gaining experience in data science and research within the biological field. In her free time, she likes to travel, cheer on the Hoos, and rewatch the Office.
 </p><br><br>
 <p style="line-height: 1.6;">
+<img align="right" src="images/drew_vanichkachorn.jpg" style="width:180px">
+<b>Andrew Vanichkachorn</b>
+<a href="mailto:acv3by@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Drew Vanichkachorn is a graduate student in the Master of Public Health (MPH) program. He joined the lab in 2019 as a 3rd Year undergraduate student majoring in Global Public Health. Drew is excited to be learning about genomics and believes this field to be important in the future of medicine. He is also interested in music and enjoys playing the piano and viola when he can.
+</p><br><br>
+<!--<p style="line-height: 1.6;">
 <img align="right" src="images/ben_ke.jpg" style="width:180px">
 <b>Benjamin Ke</b>
 <a href="mailto:bgk5ck@virginia.edu "><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Ben Ke graduated from UVA in 2022 majored in Biostatistics and will matriculate at the MD program at UVA School of Medicine. He works in the lab since his First Year at UVA and continues in the summer after graduation. He works on using data science approaches to unravel the mystery underlying physical activities (as part of the MoTrPAC consortium). He also volunteers at the UVA Hospital through Madison House and enjoys playing tennis and chess in his free time.
 </p><br><br>
-<!--<hr>
+<hr>
 <h3><font color="#002F6C">Undergraduate Students</font></h3>
 <h4><font color="#002F6C">Class of 2022</font></h4>-->
 <!--<p style="line-height: 1.6;">
@@ -478,6 +478,12 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 		<td></td>
 	</tr>
 	<tr>
+		<td><b>Benjamin Ke</b></td>
+		<td>Statistics and Biology, Computer Science minor</td>
+		<td>01/2019&ndash;06/2022</td>
+		<td>Medical Student, UVA</td>
+	</tr>
+	<tr>
 		<td><b>Zhou Lu</b></td>
 		<td>Statistics and Economics</td>
 		<td>04/2018&ndash;05/2020</td>
@@ -592,7 +598,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: May 16, 2022</p>
+<p align="right">Last modified: July 1, 2022</p>
 
 </div>
 
