--- a/people.htm
+++ b/people.htm
@@ -276,11 +276,11 @@ Drew Vanichkachorn is a graduate student in the Master of Public Health (MPH) pr
 <a href="mailto:bgk5ck@virginia.edu "><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Ben Ke graduated from UVA in 2022 majored in Biostatistics and will matriculate at the MD program at UVA School of Medicine. He works in the lab since his First Year at UVA and continues in the summer after graduation. He works on using data science approaches to unravel the mystery underlying physical activities (as part of the MoTrPAC consortium). He also volunteers at the UVA Hospital through Madison House and enjoys playing tennis and chess in his free time.
-</p><br><br>
+</p><br><br>-->
 <hr>
 <h3><font color="#002F6C">Undergraduate Students</font></h3>
-<h4><font color="#002F6C">Class of 2022</font></h4>-->
-<!--<p style="line-height: 1.6;">
+<!--<h4><font color="#002F6C">Class of 2022</font></h4>
+<p style="line-height: 1.6;">
 <img align="right" src="images/emilie_neulen.jpg" style="width:180px">
 <b>Emilie Neulen</b>
 <a href="mailto:ean4tp@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
@@ -301,15 +301,15 @@ Kuki Davey is an undergraduate student (class of 2022) from Jacksonville, Florid
 <a href="mailto:cam3zw@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Caitlin McIntyre is an undergraduate student (Class of 2024) from the Bay Area majoring in global public health or biology on a pre-health track. She is fascinated by the interdisciplinary nature of genomics research and harnessing this work to discover more about gene expression and human diseases. In her free time, she enjoys volunteering through Madison House, spending time with friends and listening to music.
-</p><br><br>
+</p><br><br>-->
 <h4><font color="#002F6C">Class of 2025</font></h4>
 <p style="line-height: 1.6;">
 <img align="right" src="images/ivory_tang.jpg" style="width:180px">
 <b>Ivory Tang</b>
 <a href="mailto:bjm7vv@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Ivory Tang (Class of 2025).
-</p><br><br>-->
+Ivory Tang (Class of 2025) plans to major in math and follow a pre-med track. She is looking forward to combining topics in biology, statistics, and computer science and hopes to attend medical school after graduation. In her free time, she enjoys listening to music and spending time outside.
+</p><br><br><br>
 <hr>
 <h3><font color="#002F6C">High School Students</font></h3>
 <!--<p style="line-height: 1.6;">
@@ -587,7 +587,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 		<td><b>Ruoyao Shi</b></td>
 		<td>Undergraduate Student in Tao Aoqing Honors Program in Biology Science, Jilin University</td>
 		<td>10/2019&ndash;05/2020</td>
-		<td>Graduate Student in Biostatistics, University of Michigan</td>
+		<td>PhD Student in Biostatistics, University of Michigan</td>
 	</tr>
 </table>
 <br>
@@ -598,7 +598,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: July 1, 2022</p>
+<p align="right">Last modified: July 8, 2022</p>
 
 </div>
 
