--- a/people.htm
+++ b/people.htm
@@ -411,9 +411,9 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 	</tr>
 	<tr>
 		<td><b>Yifan Zhang</b></td>
-		<td>MS in Biomedical Engineering</td>
+		<td>Biomedical Engineering</td>
 		<td>08/2018&ndash;12/2019</td>
-		<td></td>
+		<td>Software Engineer, Google</td>
 	</tr>
 </table>
 <br>
@@ -462,7 +462,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 	<!--<tr>
 		<td><b>Megan Grieco</b></td>
 		<td>Systems and Information Engineering</td>
-		<td>02/2019&ndash;05/2021</td>
+		<td>02/2019&ndash;07/2022</td>
 		<td></td>
 	</tr>-->
 	<tr>
@@ -598,7 +598,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: July 8, 2022</p>
+<p align="right">Last modified: July 14, 2022</p>
 
 </div>
 
