--- a/position.htm
+++ b/position.htm
@@ -173,7 +173,7 @@ Understanding the synergy of computational and experimental research and commitm
 <p style="line-height: 1.6;">
 <font color="#002F6C"><b>Application Process</b></font>
 </p><p style="line-height: 1.6;">
-To <a href="https://uva.wd1.myworkdayjobs.com/UVAJobs/job/Charlottesville-VA/Post-Doctoral-Research-Associate-in-Functional-Genomics-and-Epigenomics_R0036405" target="_blank">apply online</a>, please click <a href="https://uva.wd1.myworkdayjobs.com/UVAJobs/job/Charlottesville-VA/Post-Doctoral-Research-Associate-in-Functional-Genomics-and-Epigenomics_R0036405" target="_blank">here</a> and submit a complete application in the system. Meanwhile, Interested applicants can send a complete CV and the contact information for three references to <a href="mailto:zang@virginia.edu">zang@virginia.edu</a> with subject line "Postdoc application". The position will remain open until filled.
+To <a href="https://uva.wd1.myworkdayjobs.com/UVAJobs/job/Charlottesville-VA/Post-Doctoral-Research-Associate-in-Functional-Genomics-and-Epigenomics_R0036405" target="_blank">apply online</a>, please click <a href="https://uva.wd1.myworkdayjobs.com/UVAJobs/job/Charlottesville-VA/Post-Doctoral-Research-Associate-in-Functional-Genomics-and-Epigenomics_R0036405" target="_blank">here</a> and submit a complete application in the system. Meanwhile, interested applicants can send a complete CV and the contact information for three references to <a href="mailto:zang@virginia.edu">zang@virginia.edu</a> with subject line "Postdoc Application". The position will remain open until filled.
 </p><p style="line-height: 1.6;">
 All positions are restricted and contingent on the continuation of funding. The University of Virginia is an equal opportunity and affirmative action employer. Women, minorities, veterans and persons with disabilities are strongly encouraged to apply.
 </p><p style="line-height: 1.6;">
@@ -216,7 +216,7 @@ At least one peer-reviewed publication written in English in the previous area o
 <p style="line-height: 1.6;">
 <font color="#002F6C"><b>Application Process</b></font>
 </p><p style="line-height: 1.6;">
-<!--To <a href="https://uva.wd1.myworkdayjobs.com/UVAJobs/job/Charlottesville-VA/Postdoc-Research-Associate-in-Bioinformatics-Computational-Biology_R0030504" target="_blank">apply online</a>, please click <a href="https://uva.wd1.myworkdayjobs.com/UVAJobs/job/Charlottesville-VA/Postdoc-Research-Associate-in-Bioinformatics-Computational-Biology_R0030504" target="_blank">here</a> and submit a complete application in the system. Meanwhile, -->Interested applicants please send a complete CV and the contact information for three references to <a href="mailto:zang@virginia.edu">zang@virginia.edu</a> with subject line "Postdoc Application". The position will remain open until all positions are filled.
+To <a href="https://uva.wd1.myworkdayjobs.com/UVAJobs/job/Charlottesville-VA/Postdoc-Research-Associate-in-Bioinformatics-Computational-Biology_R0030504" target="_blank">apply online</a>, please click <a href="https://uva.wd1.myworkdayjobs.com/UVAJobs/job/Charlottesville-VA/Postdoc-Research-Associate-in-Bioinformatics-Computational-Biology_R0030504" target="_blank">here</a> and submit a complete application in the system. Meanwhile, interested applicants can send a complete CV and the contact information for three references to <a href="mailto:zang@virginia.edu">zang@virginia.edu</a> with subject line "Postdoc Application". The position will remain open until all positions are filled.
 </p><p style="line-height: 1.6;">
 All positions are restricted and contingent on the continuation of funding. The University of Virginia is an equal opportunity and affirmative action employer. Women, minorities, veterans and persons with disabilities are strongly encouraged to apply.
 </p><p style="line-height: 1.6;">
@@ -355,7 +355,7 @@ Take a look at these two videos about why we are excited to be part of the UVA c
 <a href="https://news.virginia.edu/video/charlottesville" target="_blank">"This is Charlottesville."</a>
 </p>
 <hr>
-<p align="right">Last modified: July 14, 2022</p>
+<p align="right">Last modified: July 15, 2022</p>
 </div>
 
 <script>
