--- a/index.htm
+++ b/index.htm
@@ -161,7 +161,7 @@ function myFunction() {
 		<p>
 		The Board of Visitors of UVA officially approves Chongzhi's promotion to Associate Professor, effective July 1, 2022. 
 		<br><br>
-		Billy's EPICS paper is accepted to <i><b>Computational and Structural Biotechnology Journal</b></i>!
+		Billy's EPICS paper is accepted to <a href="https://doi.org/10.1016/j.csbj.2022.06.018" target="_blank"><i><b>Computational and Structural Biotechnology Journal</b></i></a>!
 		<br><br>
 		Hongpan publishes a <a href="https://go.nature.com/3x2WMT4" target="_blank">"Behind the Paper" article</a> at the <a href="https://go.nature.com/3x2WMT4" target="_blank">Nature Portfolio Community</a> website about the recent <a href="https://www.nature.com/articles/s41467-022-30624-w" target="_blank"><i><b>Nature Communications</b></i> paper</a>. Way to go!
 		</p>
